Added feature: 1. Extent report spark 7 2. Attached screenshot to report 3. Added new paths for new reports after generation 4. New report name for more info is fixed

--- a/spark_reports 12-Feb-24 12-13-46/reports/SparkReport/Spark.html
+++ b/spark_reports 12-Feb-24 12-13-46/reports/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 12, 2024 11:59:51 AM</span></a>
+<a href="#"><span class="badge badge-primary">Feb 12, 2024 12:13:46 PM</span></a>
 </li>
 </ul>
 </div>
@@ -71,13 +71,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 12, 2024 11:59:51 AM</h3>
+<h3>Feb 12, 2024 12:13:46 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 12, 2024 12:00:04 PM</h3>
+<h3>Feb 12, 2024 12:13:59 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -167,7 +167,7 @@
 </div></div>
 <script>
 var timeline = {
-"Contact us page":12.509
+"Contact us page":12.741
 };
 </script>
 <div class="row">
@@ -268,7 +268,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">Contact us page</p>
             <p class="text-sm">
-              <span>11:59:51 AM</span> / <span>00:00:12:509</span>
+              <span>12:13:47 PM</span> / <span>00:00:12:741</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -277,9 +277,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">Contact us page</h5>
-<span class='badge badge-success'>02.12.2024 11:59:51 AM</span>
-<span class='badge badge-danger'>02.12.2024 12:00:04 PM</span>
-<span class='badge badge-default'>00:00:12:509</span>
+<span class='badge badge-success'>02.12.2024 12:13:47 PM</span>
+<span class='badge badge-danger'>02.12.2024 12:13:59 PM</span>
+<span class='badge badge-default'>00:00:12:741</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -316,8 +316,8 @@ eventsCount: 5,
 Build info: version: '4.17.0', revision: 'e52b1be057*'
 System info: os.name: 'Linux', os.arch: 'amd64', os.version: '6.5.0-17-generic', java.version: '17.0.9'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 121.0.6167.160, chrome: {chromedriverVersion: 121.0.6167.85 (3f98d690ad7e..., userDataDir: /tmp/.org.chromium.Chromium...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:37915}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:37915/devtoo..., se:cdpVersion: 121.0.6167.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: fb9cf7e4075ff004d046d2917140baa5
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 121.0.6167.160, chrome: {chromedriverVersion: 121.0.6167.85 (3f98d690ad7e..., userDataDir: /tmp/.org.chromium.Chromium...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:34441}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:34441/devtoo..., se:cdpVersion: 121.0.6167.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 98c55eec1c7d9aa9ce420c0830ed65bc
 	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
 	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
 	at pageObjects.BasePage.waitVisibilityBy(BasePage.java:56)
@@ -331,7 +331,7 @@ Session ID: fb9cf7e4075ff004d046d2917140baa5
               </div>
               <div class="step pass-bg" title="AFTER_STEP">
                 <span>stepDefinitions.base.Hooks.captureExceptionImage(io.cucumber.java.Scenario)</span>
-      <div>1707732003953
+      <div>1707732839428
           <div class="row mb-3"><div class="col-md-3">
 <img data-featherlight='../embedded1.png' src="../embedded1.png">
     
@@ -387,7 +387,7 @@ Session ID: fb9cf7e4075ff004d046d2917140baa5
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>11:59:51 AM</td>
+<td>12:13:47 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Verify that the user can open contact us page</a>
 <div class="">
@@ -439,7 +439,7 @@ Session ID: fb9cf7e4075ff004d046d2917140baa5
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>11:59:53 AM</td>
+<td>12:13:49 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='8'>And User sees the section "Връзка с Нас"</a>
 <div class="">
