--- a/spark_reports 12-Feb-24 13-05-36/sparkReports/SparkReport/Spark.html
+++ b/spark_reports 12-Feb-24 13-05-36/sparkReports/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 12, 2024 12:13:46 PM</span></a>
+<a href="#"><span class="badge badge-primary">Feb 12, 2024 01:05:36 PM</span></a>
 </li>
 </ul>
 </div>
@@ -57,11 +57,6 @@
 <span class="ico"><i class="fa fa-tag"></i></span>
 </a>
 </li>
-<li class="nav-item dropdown" onclick="toggleView('exception-view')">
-<a id="nav-exception" class="dropdown-toggle" href="#">
-<span class="ico"><i class="fa fa-bug"></i></span>
-</a>
-</li>
 </ul>
 </div>
 </div>      <div class="vcontainer">
@@ -71,25 +66,25 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 12, 2024 12:13:46 PM</h3>
+<h3>Feb 12, 2024 01:05:36 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 12, 2024 12:13:59 PM</h3>
+<h3>Feb 12, 2024 01:05:38 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>0</h3>
+<h3>1</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>1</h3>
+<h3>0</h3>
 </div></div>
 </div>
 </div>
@@ -105,12 +100,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='0%'>
-<b>0</b> features passed
+<div><small data-tooltip='100%'>
+<b>1</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='100%'><b>1</b> features failed,
+<small data-tooltip='0%'><b>0</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -128,9 +123,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='100%'><b>1</b> scenarios failed,
+<small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -148,9 +143,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='75%'><b>3</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>2</b> steps passed</small></div>
 <div>
-<small data-tooltip='25%'><b>1</b> steps failed,
+<small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -167,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Contact us page":12.741
+"Homepage company LOGO":1.567
 };
 </script>
 <div class="row">
@@ -177,12 +172,12 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@functional2</td>
-<td>0</td>
+<td>@UI1</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
-<td>0%</td>
+<td>0</td>
+<td>100%</td>
 </tr>
 </tbody>
 </table></div>
@@ -219,19 +214,19 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 0,
-failParent: 1,
+passParent: 1,
+failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 0,
-failChild: 1,
+passChild: 1,
+failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 3,
-failGrandChild: 1,
+passGrandChild: 2,
+failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
@@ -247,7 +242,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
+<a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -255,31 +250,31 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@functional2</a>
+<a class="dropdown-item" href="#">@UI1</a>
 </ul>
 </li>
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="1"
+        <li class="test-item"  status="pass" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Contact us page</p>
+            <p class="name">Homepage company LOGO</p>
             <p class="text-sm">
-              <span>12:13:47 PM</span> / <span>00:00:12:741</span>
-              <span class="badge fail-bg log float-right">Fail</span>
+              <span>1:05:36 PM</span> / <span>00:00:01:567</span>
+              <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">Contact us page</h5>
-<span class='badge badge-success'>02.12.2024 12:13:47 PM</span>
-<span class='badge badge-danger'>02.12.2024 12:13:59 PM</span>
-<span class='badge badge-default'>00:00:12:741</span>
+<h5 class="test-status text-pass">Homepage company LOGO</h5>
+<span class='badge badge-success'>02.12.2024 1:05:36 PM</span>
+<span class='badge badge-danger'>02.12.2024 1:05:38 PM</span>
+<span class='badge badge-default'>00:00:01:567</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -291,52 +286,18 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Verify that the user can open contact us page</div>
-          <div class="status-avatar float-right mr-4">
-            <i class="fa fa-paperclip"></i>
-          </div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Validate homepage logo is listed</div>
       </div>
     </div>
-        <div class="">
+        <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepDefinitions.ContactUsSteps.user_is_on_the_homepage2(java.lang.String)">
-                <span>Given User is on the homepage2 "https://ecometal.bg/"</span>
+              <div class="step pass-bg" title="stepDefinitions.HomepageLogoSteps.user_opens_the_following_url_to_see_the_logo_ecometal(java.lang.String)">
+                <span>Given User opens the following url to see the logo ECOMETAL "https://ecometal.bg/"</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.ContactUsSteps.user_clicks_on_link_contact_us()">
-                <span>And User clicks on link Contact us</span>
-      <div>
-      </div>
-              </div>
-              <div class="step fail-bg" title="stepDefinitions.ContactUsSteps.user_sees_the_section(java.lang.String)">
-                <span>And User sees the section "Връзка с Нас"</span>
-      <div>
-        <textarea disabled class="code-block">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of all elements located by By.xpath: //h2[contains(.,'Връзка с Нас2222')] (tried for 10 second(s) with 500 milliseconds interval)
-Build info: version: '4.17.0', revision: 'e52b1be057*'
-System info: os.name: 'Linux', os.arch: 'amd64', os.version: '6.5.0-17-generic', java.version: '17.0.9'
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 121.0.6167.160, chrome: {chromedriverVersion: 121.0.6167.85 (3f98d690ad7e..., userDataDir: /tmp/.org.chromium.Chromium...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:34441}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:34441/devtoo..., se:cdpVersion: 121.0.6167.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 98c55eec1c7d9aa9ce420c0830ed65bc
-	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
-	at pageObjects.BasePage.waitVisibilityBy(BasePage.java:56)
-	at pageObjects.BasePage.assertEqualsByElementExpectedText(BasePage.java:101)
-	at pages.ContactUsPage.getConnectionWithUsTextContactUsPage(ContactUsPage.java:25)
-	at stepDefinitions.ContactUsSteps.user_sees_the_section(ContactUsSteps.java:31)
-	at ✽.User sees the section "Връзка с Нас"(classpath:features/Contact.feature:7)
-</textarea>
-      
-      </div>
-              </div>
-              <div class="step pass-bg" title="AFTER_STEP">
-                <span>stepDefinitions.base.Hooks.captureExceptionImage(io.cucumber.java.Scenario)</span>
-      <div>1707732839428
-          <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='../embedded1.png' src="../embedded1.png">
-    
-    </div></div>
-</div>
+              <div class="step pass-bg" title="stepDefinitions.HomepageLogoSteps.user_sees_the_logo_of_the_company_listed_successfully()">
+                <span>And User sees the logo of the company listed successfully</span>
       <div>
       </div>
               </div>
@@ -366,15 +327,15 @@ Session ID: 98c55eec1c7d9aa9ce420c0830ed65bc
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log badge-danger'>1</span>
+<span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@functional2</p>
+<p class="name">@UI1</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@functional2</h4>
-<span status="fail" class='badge log badge-danger'>1 failed</span>
+<h4>@UI1</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -385,65 +346,13 @@ Session ID: 98c55eec1c7d9aa9ce420c0830ed65bc
 </tr>
 </thead>
 <tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>12:13:47 PM</td>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>13:05:36 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>Verify that the user can open contact us page</a>
+<a href="#" class="linked" test-id='1' id='2'>Validate homepage logo is listed</a>
 <div class="">
-<span class="badge badge-default">Contact us page.Verify that the user can open contact us page</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-</ul>
-</div>
-</div>
-<div class="test-content scrollable">
-<div class="test-content-detail">
-<div class="detail-body"></div>
-</div>
-</div>
-</div><div class="test-wrapper row view exception-view attributes-view">
-<div class="test-list">
-<div class="test-list-tools">
-<ul class="tools pull-left"><li><a href=""><span class="font-size-14">Exception</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
-</div>
-<div class="test-list-wrapper scrollable">
-<ul class="test-list-item">
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log badge-danger'>1</span>
-</span>
-<p class="name">org.openqa.selenium.TimeoutException</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>org.openqa.selenium.TimeoutException</h4>
-<span status="fail" class='badge log badge-danger'>1 failed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>12:13:49 PM</td>
-<td>
-<a href="#" class="linked" test-id='1' id='8'>And User sees the section "Връзка с Нас"</a>
-<div class="">
-<span class="badge badge-default">Contact us page.Verify that the user can open contact us page.And User sees the section "Връзка с Нас"</span>
+<span class="badge badge-default">Homepage company LOGO.Validate homepage logo is listed</span>
 </div>
 </td>
 </tr>
