--- a/spark_reports 12-Feb-24 15-48-07/sparkReports/SparkReport/Spark.html
+++ b/spark_reports 12-Feb-24 15-48-07/sparkReports/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 12, 2024 01:05:36 PM</span></a>
+<a href="#"><span class="badge badge-primary">Feb 12, 2024 03:48:07 PM</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 12, 2024 01:05:36 PM</h3>
+<h3>Feb 12, 2024 03:48:07 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 12, 2024 01:05:38 PM</h3>
+<h3>Feb 12, 2024 03:48:09 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Homepage company LOGO":1.567
+"Homepage company Phone number":1.688
 };
 </script>
 <div class="row">
@@ -172,7 +172,7 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@UI1</td>
+<td>@UI2</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -250,7 +250,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@UI1</a>
+<a class="dropdown-item" href="#">@UI2</a>
 </ul>
 </li>
 </ul>
@@ -261,9 +261,9 @@ eventsCount: 5,
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Homepage company LOGO</p>
+            <p class="name">Homepage company Phone number</p>
             <p class="text-sm">
-              <span>1:05:36 PM</span> / <span>00:00:01:567</span>
+              <span>3:48:07 PM</span> / <span>00:00:01:688</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -271,10 +271,10 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Homepage company LOGO</h5>
-<span class='badge badge-success'>02.12.2024 1:05:36 PM</span>
-<span class='badge badge-danger'>02.12.2024 1:05:38 PM</span>
-<span class='badge badge-default'>00:00:01:567</span>
+<h5 class="test-status text-pass">Homepage company Phone number</h5>
+<span class='badge badge-success'>02.12.2024 3:48:07 PM</span>
+<span class='badge badge-danger'>02.12.2024 3:48:09 PM</span>
+<span class='badge badge-default'>00:00:01:688</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -286,18 +286,18 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Validate homepage logo is listed</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Validate homepage phone number is listed in the right corner of the page</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepDefinitions.HomepageLogoSteps.user_opens_the_following_url_to_see_the_logo_ecometal(java.lang.String)">
-                <span>Given User opens the following url to see the logo ECOMETAL "https://ecometal.bg/"</span>
+              <div class="step pass-bg" title="stepDefinitions.HomepageGetPhoneNumberSteps.user_opens_the_following_url_to_see_the_phone_number(java.lang.String)">
+                <span>Given User opens the following url to see the phone number "https://ecometal.bg/"</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.HomepageLogoSteps.user_sees_the_logo_of_the_company_listed_successfully()">
-                <span>And User sees the logo of the company listed successfully</span>
+              <div class="step pass-bg" title="stepDefinitions.HomepageGetPhoneNumberSteps.user_sees_the_phonen_number_of_the_company_listed_successfully(java.lang.String)">
+                <span>And User sees the phonen number of the company listed successfully "0885 771 777"</span>
       <div>
       </div>
               </div>
@@ -329,12 +329,12 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@UI1</p>
+<p class="name">@UI2</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@UI1</h4>
+<h4>@UI2</h4>
 <span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -348,11 +348,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>13:05:36 PM</td>
+<td>15:48:07 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>Validate homepage logo is listed</a>
+<a href="#" class="linked" test-id='1' id='2'>Validate homepage phone number is listed in the right corner of the page</a>
 <div class="">
-<span class="badge badge-default">Homepage company LOGO.Validate homepage logo is listed</span>
+<span class="badge badge-default">Homepage company Phone number.Validate homepage phone number is listed in the right corner of the page</span>
 </div>
 </td>
 </tr>
