Done changes: 1. Added new positive test case 2. Added new negative test case 3. New custom method is added in BasePage 4. New packages added for each functionality or per page(segregation)

--- a/spark_reports 14-Feb-24 13-14-50/sparkReports/SparkReport/Spark.html
+++ b/spark_reports 14-Feb-24 13-14-50/sparkReports/SparkReport/Spark.html
@@ -291,32 +291,32 @@ eventsCount: 5,
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepDefinitions.negativeTCs.ContactUsTCs.ContactUsRequiredFieldName.user_opens_this_address_to_reach_the_contact_us_page(java.lang.String)">
+              <div class="step pass-bg" title="stepDefinitions.negativeTCs.contactUsTCs.ContactUsRequiredFieldName.user_opens_this_address_to_reach_the_contact_us_page(java.lang.String)">
                 <span>Given User opens this address "https://ecometal.bg/" to reach the contact us page</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.negativeTCs.ContactUsTCs.ContactUsRequiredFieldName.user_clicks_on_contact_us_white_section_located_in_front_of_the_phone_number()">
+              <div class="step pass-bg" title="stepDefinitions.negativeTCs.contactUsTCs.ContactUsRequiredFieldName.user_clicks_on_contact_us_white_section_located_in_front_of_the_phone_number()">
                 <span>And User clicks on Contact us white section  located in front of the phone number</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.negativeTCs.ContactUsTCs.ContactUsRequiredFieldName.user_does_not_enter_name_in_name_input_field()">
+              <div class="step pass-bg" title="stepDefinitions.negativeTCs.contactUsTCs.ContactUsRequiredFieldName.user_does_not_enter_name_in_name_input_field()">
                 <span>And User does not enter name in name input field</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.negativeTCs.ContactUsTCs.ContactUsRequiredFieldName.user_enters_the_following_email_in_next_field_email(java.lang.String)">
+              <div class="step pass-bg" title="stepDefinitions.negativeTCs.contactUsTCs.ContactUsRequiredFieldName.user_enters_the_following_email_in_next_field_email(java.lang.String)">
                 <span>And User enters the following email "amador@abv.bg" in next field email</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.negativeTCs.ContactUsTCs.ContactUsRequiredFieldName.user_enters_town_in_town_input_field2(java.lang.String)">
+              <div class="step pass-bg" title="stepDefinitions.negativeTCs.contactUsTCs.ContactUsRequiredFieldName.user_enters_town_in_town_input_field2(java.lang.String)">
                 <span>And User enters town "София" in town input field2</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.negativeTCs.ContactUsTCs.ContactUsRequiredFieldName.user_sees_in_red_text_with_the_following_under_name_input_field(java.lang.String)">
+              <div class="step pass-bg" title="stepDefinitions.negativeTCs.contactUsTCs.ContactUsRequiredFieldName.user_sees_in_red_text_with_the_following_under_name_input_field(java.lang.String)">
                 <span>Then User sees in red text with the following "Това поле е задължително." under Name input field</span>
       <div>
       </div>
