1. Search Test Cases improvements

--- a/spark_reports 14-Mar-24 15-10-18/sparkReports/SparkReport/Spark.html
+++ b/spark_reports 14-Mar-24 15-10-18/sparkReports/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 13, 2024 03:00:18 PM</span></a>
+<a href="#"><span class="badge badge-primary">Mar 14, 2024 03:10:18 PM</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 13, 2024 03:00:18 PM</h3>
+<h3>Mar 14, 2024 03:10:18 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 13, 2024 03:00:24 PM</h3>
+<h3>Mar 14, 2024 03:10:24 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -143,7 +143,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>2</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>5</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Share component with all social icons under the article":4.783
+"Search functionality":4.984
 };
 </script>
 <div class="row">
@@ -172,7 +172,15 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@homepage1</td>
+<td>@functional</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100%</td>
+</tr>
+<tr>
+<td>@search</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -225,7 +233,7 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 2,
+passGrandChild: 5,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -250,7 +258,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@homepage1</a>
+<a class="dropdown-item" href="#">@functional</a><a class="dropdown-item" href="#">@search</a>
 </ul>
 </li>
 </ul>
@@ -261,9 +269,9 @@ eventsCount: 5,
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Share component with all social icons under the article</p>
+            <p class="name">Search functionality</p>
             <p class="text-sm">
-              <span>3:00:19 PM</span> / <span>00:00:04:783</span>
+              <span>3:10:19 PM</span> / <span>00:00:04:984</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -271,10 +279,10 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Share component with all social icons under the article</h5>
-<span class='badge badge-success'>03.13.2024 3:00:19 PM</span>
-<span class='badge badge-danger'>03.13.2024 3:00:24 PM</span>
-<span class='badge badge-default'>00:00:04:783</span>
+<h5 class="test-status text-pass">Search functionality</h5>
+<span class='badge badge-success'>03.14.2024 3:10:19 PM</span>
+<span class='badge badge-danger'>03.14.2024 3:10:24 PM</span>
+<span class='badge badge-default'>00:00:04:984</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -286,18 +294,33 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>User is able to use the social share component in list with articles</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>User should be able to search for an article</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepDefinitions.testCases.homepageTCs.positiveTCs.ShareComponentInListSteps.user_opens_the_following_url_to_see_the_share_component_in_list(java.lang.String)">
-                <span>Given User opens the following url "https://hotnews.bg/" to see the share component in list</span>
+              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_has_open_the_official_web_page(java.lang.String)">
+                <span>Given User has open the official web page "https://www.hotnews.bg"</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.testCases.homepageTCs.positiveTCs.ShareComponentInListSteps.user_is_able_to_use_the_share_component_by_hover_on_it()">
-                <span>And User is able to use the share component by hover on it</span>
+              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_clicks_on_search_icon()">
+                <span>And User clicks on search icon</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_enters_the_following_search_patter(java.lang.String)">
+                <span>And User enters the following search patter "Мария: Не нося сутиен от години"</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_clicks_on_search_icon_to_see_the_result()">
+                <span>And User clicks on search icon to see the result</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_sees_a_list_with_articles_containing_the_title(java.lang.String)">
+                <span>Then User sees a list with articles containing the title "Мария: Не нося сутиен от години"</span>
       <div>
       </div>
               </div>
@@ -320,7 +343,7 @@ eventsCount: 5,
 <div class="test-list">
 <div class="test-list-tools">
 <ul class="tools pull-left"><li><a href=""><span class="font-size-14">Category</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">2</span></a></li></ul>
 </div>
 <div class="test-list-wrapper scrollable">
 <ul class="test-list-item">
@@ -329,12 +352,12 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@homepage1</p>
+<p class="name">@functional</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@homepage1</h4>
+<h4>@functional</h4>
 <span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -348,11 +371,47 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>15:00:19 PM</td>
+<td>15:10:19 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>User is able to use the social share component in list with articles</a>
+<a href="#" class="linked" test-id='1' id='2'>User should be able to search for an article</a>
 <div class="">
-<span class="badge badge-default">Share component with all social icons under the article.User is able to use the social share component in list with articles</span>
+<span class="badge badge-default">Search functionality.User should be able to search for an article</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>1</span>
+</span>
+<p class="name">@search</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>@search</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>15:10:19 PM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='2'>User should be able to search for an article</a>
+<div class="">
+<span class="badge badge-default">Search functionality.User should be able to search for an article</span>
 </div>
 </td>
 </tr>
