--- a/spark_reports 15-Mar-24 15-05-08/sparkReports/SparkReport/Spark.html
+++ b/spark_reports 15-Mar-24 15-05-08/sparkReports/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 14, 2024 03:10:18 PM</span></a>
+<a href="#"><span class="badge badge-primary">Mar 15, 2024 03:05:08 PM</span></a>
 </li>
 </ul>
 </div>
@@ -66,19 +66,19 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 14, 2024 03:10:18 PM</h3>
+<h3>Mar 15, 2024 03:05:08 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 14, 2024 03:10:24 PM</h3>
+<h3>Mar 15, 2024 03:05:22 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>1</h3>
+<h3>2</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -101,7 +101,7 @@
 </div>
 <div class="card-footer">
 <div><small data-tooltip='100%'>
-<b>1</b> features passed
+<b>2</b> features passed
 </small>
 </div>
 <div>
@@ -123,7 +123,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>2</b> scenarios passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -143,7 +143,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>5</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>6</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Search functionality":4.984
+"Sudbi main list with articles":3.898,"Sudbi category":10.47
 };
 </script>
 <div class="row">
@@ -172,16 +172,8 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@functional</td>
-<td>1</td>
-<td>0</td>
-<td>0</td>
-<td>0</td>
-<td>100%</td>
-</tr>
-<tr>
-<td>@search</td>
-<td>1</td>
+<td>@sudbi</td>
+<td>2</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
@@ -222,18 +214,18 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 1,
+passParent: 2,
 failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 1,
+passChild: 2,
 failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 5,
+passGrandChild: 6,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -258,7 +250,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@functional</a><a class="dropdown-item" href="#">@search</a>
+<a class="dropdown-item" href="#">@sudbi</a>
 </ul>
 </li>
 </ul>
@@ -269,9 +261,9 @@ eventsCount: 5,
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Search functionality</p>
+            <p class="name">Sudbi main list with articles</p>
             <p class="text-sm">
-              <span>3:10:19 PM</span> / <span>00:00:04:984</span>
+              <span>3:05:08 PM</span> / <span>00:00:03:898</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -279,48 +271,94 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Search functionality</h5>
-<span class='badge badge-success'>03.14.2024 3:10:19 PM</span>
-<span class='badge badge-danger'>03.14.2024 3:10:24 PM</span>
-<span class='badge badge-default'>00:00:04:984</span>
+<h5 class="test-status text-pass">Sudbi main list with articles</h5>
+<span class='badge badge-success'>03.15.2024 3:05:08 PM</span>
+<span class='badge badge-danger'>03.15.2024 3:05:12 PM</span>
+<span class='badge badge-default'>00:00:03:898</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
-<div class="m-t-10 m-l-5"></div>
+<div class="m-t-10 m-l-5"> Main list is activated from the CMS</div>
 </div>
 </div>
 <div class="accordion mt-4">
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>User should be able to search for an article</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>User is able to verify that the main list is listed on the page with articles</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_has_open_the_official_web_page(java.lang.String)">
-                <span>Given User has open the official web page "https://www.hotnews.bg"</span>
+              <div class="step pass-bg" title="stepDefinitions.testCases.categorySudbi.MainSectionWithArticlesSteps.user_opens_url_to_verify_that_the_main_list_is_listed_in_sudbi(java.lang.String)">
+                <span>Given User opens url "https://hotnews.bg/sudbi" to verify that the main list is listed in Sudbi</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_clicks_on_search_icon()">
-                <span>And User clicks on search icon</span>
+              <div class="step pass-bg" title="stepDefinitions.testCases.categorySudbi.MainSectionWithArticlesSteps.user_is_successfully_navigated_to_sudbi_page_and_the_main_list_is_listed()">
+                <span>Then User is successfully navigated to Sudbi page and the main list is listed</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_enters_the_following_search_patter(java.lang.String)">
-                <span>And User enters the following search patter "Мария: Не нося сутиен от години"</span>
+          </div>
+        </div>
+  </div>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="pass" test-id="9"
+          author=""
+          tag=""
+          device="">
+          <div class="test-detail">
+            <p class="name">Sudbi category</p>
+            <p class="text-sm">
+              <span>3:05:12 PM</span> / <span>00:00:10:470</span>
+              <span class="badge pass-bg log float-right">Pass</span>
+            </p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<h5 class="test-status text-pass">Sudbi category</h5>
+<span class='badge badge-success'>03.15.2024 3:05:12 PM</span>
+<span class='badge badge-danger'>03.15.2024 3:05:22 PM</span>
+<span class='badge badge-default'>00:00:10:470</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=9</span>
+<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
+<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+</div>
+<div class="m-t-10 m-l-5"> Category Sudbi is activated from the CMS</div>
+</div>
+</div>
+<div class="accordion mt-4">
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="10"><span class="badge log pass-bg mr-2">Pass</span>User is able to open category Sudbi</div>
+      </div>
+    </div>
+        <div class="collapse">
+          <div class="card-body">
+              <div class="step pass-bg" title="stepDefinitions.testCases.categorySudbi.OpenCategorySudbiGetTitleSteps.user_opens_url_to_open_sudbi_category(java.lang.String)">
+                <span>Given User opens url "https://hotnews.bg/" to open Sudbi category</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_clicks_on_search_icon_to_see_the_result()">
-                <span>And User clicks on search icon to see the result</span>
+              <div class="step pass-bg" title="stepDefinitions.testCases.categorySudbi.OpenCategorySudbiGetTitleSteps.user_clicks_on_hamburger_menu_to_open_sudbi_category()">
+                <span>And User clicks on hamburger menu to open Sudbi category</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.testCases.searchFunctionalityTCs.positiveTCs.SearchArticleSteps.user_sees_a_list_with_articles_containing_the_title(java.lang.String)">
-                <span>Then User sees a list with articles containing the title "Мария: Не нося сутиен от години"</span>
+              <div class="step pass-bg" title="stepDefinitions.testCases.categorySudbi.OpenCategorySudbiGetTitleSteps.user_selects_sudbi_from_dropdown()">
+                <span>And User selects Sudbi from dropdown</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.testCases.categorySudbi.OpenCategorySudbiGetTitleSteps.user_is_navigated_to_sudbi_page_and_sees_title_sudbi(java.lang.String)">
+                <span>Then User is navigated to Sudbi page and sees title Sudbi "СЪДБИ"</span>
       <div>
       </div>
               </div>
@@ -343,22 +381,22 @@ eventsCount: 5,
 <div class="test-list">
 <div class="test-list-tools">
 <ul class="tools pull-left"><li><a href=""><span class="font-size-14">Category</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">2</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
 </div>
 <div class="test-list-wrapper scrollable">
 <ul class="test-list-item">
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>1</span>
+<span class='badge log pass-bg'>2</span>
 </span>
-<p class="name">@functional</p>
-<p class="duration text-sm">1 tests</p>
+<p class="name">@sudbi</p>
+<p class="duration text-sm">2 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@functional</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
+<h4>@sudbi</h4>
+<span status="pass" class='badge log pass-bg'>2 passed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -371,47 +409,21 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>15:10:19 PM</td>
+<td>15:05:08 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>User should be able to search for an article</a>
+<a href="#" class="linked" test-id='1' id='2'>User is able to verify that the main list is listed on the page with articles</a>
 <div class="">
-<span class="badge badge-default">Search functionality.User should be able to search for an article</span>
+<span class="badge badge-default">Sudbi main list with articles.User is able to verify that the main list is listed on the page with articles</span>
 </div>
 </td>
 </tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log pass-bg'>1</span>
-</span>
-<p class="name">@search</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>@search</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>15:10:19 PM</td>
+<td>15:05:12 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>User should be able to search for an article</a>
+<a href="#" class="linked" test-id='9' id='10'>User is able to open category Sudbi</a>
 <div class="">
-<span class="badge badge-default">Search functionality.User should be able to search for an article</span>
+<span class="badge badge-default">Sudbi category.User is able to open category Sudbi</span>
 </div>
 </td>
 </tr>
